코드가 꼬여서 수동으로 원상복구함