@@ -12,7 +12,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -22,33 +21,27 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .csrf(AbstractHttpConfigurer::disable) // REST API라 CSRF 보안 끔
+                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // React와 통신 허용
                 .authorizeHttpRequests(auth -> auth
-                        // [수정] API는 누구나 접근 가능, 그 외에는 상황에 따라 설정
-                        .requestMatchers("/api/**").permitAll()
-                        .requestMatchers("/", "/index.html", "/assets/**", "/login", "/signup").permitAll()
-                        .anyRequest().permitAll() // 일단 테스트를 위해 모두 허용 (나중에 .authenticated()로 변경 권장)
+                        .requestMatchers("/api/**").permitAll() // 로그인 없이 API 호출 허용 (테스트용)
+                        .anyRequest().permitAll()
                 );
 
         return http.build();
     }
 
+    // 비밀번호 암호화 도구
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
+    // CORS 설정: React(5173) 포트 허용
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        
-        // [수정] 중요! 실제 도메인과 HTTPS 주소를 모두 허용해야 합니다.
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:5173",
-                "http://logam.click",
-                "https://logam.click"
-        ));
+        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
